--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "prepare": "husky",
     "lint": "npm --prefix ./src run lint",
     "type-check": "npm --prefix ./src run type-check"
+  },
+  "dependencies": {
+    "remark-gfm": "^4.0.0"
   }
 }
