--- a/src/package.json
+++ b/src/package.json
@@ -49,8 +49,11 @@
         "glob": "8.1.0"
     },
     "dependencies": {
+        "@tailwindcss/typography": "^0.5.15",
         "react-markdown": "^9.0.1",
         "react-slick": "^0.30.2",
+        "react-syntax-highlighter": "^15.5.0",
+        "remark-gfm": "^4.0.0",
         "slick-carousel": "^1.8.1"
     }
 }
